WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152584
[CoordinatedGraphics] VideoRenderRequestScheduler shouldn't dispatch to main thread in threaded compositor
https://bugs.webkit.org/show_bug.cgi?id=152584
Summary
[CoordinatedGraphics] VideoRenderRequestScheduler shouldn't dispatch to main ...
Zan Dobersek
Reported
2015-12-29 03:32:16 PST
[CoordinatedGraphics] VideoRenderRequestScheduler shouldn't dispatch to main thread in threaded compositor
Attachments
Patch
(3.81 KB, patch)
2015-12-29 03:37 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.05 KB, patch)
2015-12-29 23:39 PST
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2015-12-29 03:37:39 PST
Created
attachment 267983
[details]
Patch
Zan Dobersek
Comment 2
2015-12-29 23:39:09 PST
Created
attachment 268001
[details]
Patch for landing With an updated ChangeLog.
Zan Dobersek
Comment 3
2015-12-30 01:48:55 PST
Comment on
attachment 268001
[details]
Patch for landing Clearing flags on attachment: 268001 Committed
r194446
: <
http://trac.webkit.org/changeset/194446
>
Zan Dobersek
Comment 4
2015-12-30 01:49:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug